--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
     <title>Premiers pas (bootstrap edition)</title>
   </head>
   <body>
+    <style>
+    .row div {border:1px solid red;}
+    </style>
     <header class="container-fluid">
     <h1>Bonjour</h1>
     <p>mes premiers pas avec bootstrap</p>
   </header>
+  <nav class="navbar">
+    
+  </nav>
+  <main class="row">
+    <div class="col-2">
+      colonne
+    </div>
+    <div class="col-2">
+      colonne
+    </div>
+    <div class="col-3 offset-2">
+      colonne
+    </div>
+    <div class="col-3">
+      colonne
+    </div>"
+  </main>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
